samples/_failures_safe/1761341773_1f9c86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bebe2f46.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_bebe2f46.c:176:9: error: expected identifier or ‘(’ at end of input
  176 |         Token
      |         ^~~~~
./samples/SAFE/__tmp_bebe2f46.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bebe2f46.c:176:9: error: expected declaration or statement at end of input
